--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+     <h2>TO DO LIST</h2>
+     <input id="userInput" type="text">
+     <button id="Submit">Add</button>
+     <div class="task">
+     <input type="checkbox" name="Checkbox" id="Checkbox">
+     <p></p>
+    </div>
+</div>
 </body>
 </html>
