--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <button id="Submit">Add</button>
      <div class="task">
      <input type="checkbox" name="Checkbox" id="Checkbox">
-     <p></p>
+     <p>do programing daily</p>
     </div>
 </div>
 </body>
