--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
      <div class="task">
      <input type="checkbox" name="Checkbox" id="Checkbox">
      <p>do programing daily</p>
+        <!-- <button id="Delete">Delete</button> -->
     </div>
 </div>
 </body>
