--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
      <input id="userInput" type="text">
      <button id="Submit">Add</button>
      <div class="task">
-     <input type="checkbox" name="Checkbox" id="Checkbox">
+     <input type="radio" name="Checkbox" id="Checkbox">
      <p>do programing daily</p>
-        <!-- <button id="Delete">Delete</button> -->
+        <button id="Delete">Delete</button>
     </div>
 </div>
 </body>
