--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-     <h2>TO DO LIST</h2>
-     <input id="userInput" type="text">
-     <button id="Submit">Add</button>
-     <div class="task">
-     <input type="radio" name="Checkbox" id="Checkbox">
-     <p>do programing daily</p>
+        
+      <h2>TO DO LIST</h2>
+      <input id="userInput" type="text" />
+      <button id="Submit">Add</button>
+
+      <div class="task">
+        <div class="outter"><div class="box"></div></div>
+        <!-- <input type="radio" name="Checkbox" id="Checkbox"> -->
+        <p>do programing daily</p>
         <button id="Delete">Delete</button>
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
