--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
       <h2>TO DO LIST</h2>
       <input id="userInput" type="text" />
       <button id="Submit">Add</button>
-
-      <div class="task">
+      <div id="taskContainer" class="hidden">
         <div class="outter"><div class="box"></div></div>
         <!-- <input type="radio" name="Checkbox" id="Checkbox"> -->
-        <p>do programing daily</p>
+        <p id="Tasks"></p>
         <button id="Delete">Delete</button>
       </div>
     </div>
