--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
   </head>
   <body>
     <div class="container">
-        
       <h2>TO DO LIST</h2>
       <input id="userInput" type="text" />
       <button id="Submit">Add</button>
       <div id="taskContainer" class="hidden">
         <div class="outter"><div class="box"></div></div>
-        <!-- <input type="radio" name="Checkbox" id="Checkbox"> -->
-        <p id="Tasks"></p>
-        <button id="Delete">Delete</button>
+        <ul class="taskBox">
+          <li>task one</li>
+        </ul>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
